# tauri-interop

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  index.html  publish.sh
.cargo/: config.toml
.github/workflows/: rust.yml
api/: Cargo.toml
api/src/: cmd.rs  lib.rs  model.rs
backend/: Cargo.toml
backend/src/: main.rs
frontend/: Cargo.toml
frontend/src/: main.rs
src/: bindings.rs  cmd.rs  command.rs  emit.rs  event.rs  lib.rs  listen.rs  main.rs
src-tauri/: Cargo.toml
src-tauri/src/: main.rs
src/command/: bindings.rs  type_aliases.rs
src/event/: emit.rs  listen.rs
src/event/emit/: state_helper.rs
src/event/listen/: leptos.rs
tauri-interop/: Cargo.toml
tauri-interop-macro/: Cargo.toml
tauri-interop-macro/src/: command.rs  event.rs  lib.rs
tauri-interop-macro/src/command/: collect.rs  wrapper.rs
tauri-interop-macro/src/event/: emit.rs  listen.rs
tauri-interop/src/: bindings.rs  lib.rs  listen.rs
test-project/: Cargo.toml  README.md
test-project/api/: Cargo.toml
test-project/api/src/: cmd.rs  command.rs  lib.rs  model.rs
test-project/api/src/command/: cmd.rs  other_cmd.rs
test-project/api/src/model/: host_impl.rs  other_cmd.rs
test-project/src/: main.rs
test-project/src-tauri/: Cargo.toml  tauri.conf.json
test-project/src-tauri/src/: lib.rs  main.rs
