[workspace]
members = ["tauri-interop-macro"]
package.edition = "2021"
package.version = "2.1.1"
package.keywords = ["wasm", "tauri", "command", "event", "leptos"]
package.authors = ["photovoltex"]
package.repository = "https://github.com/photovoltex/tauri-interop.git"
package.license = "MIT OR Apache-2.0"

[package.metadata.docs.rs]
# see https://docs.rs/about/metadata for more options
all-features = true

[package]
edition.workspace = true
version.workspace = true
keywords.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

name = "tauri-interop"
description = "Easily connect your rust frontend and backend without writing duplicate code."
readme = "README.md"

[dependencies]
#tauri-interop-macro = { path = "./tauri-interop-macro" }
tauri-interop-macro = "2.1.1"

js-sys = "0.3"
serde = { version = "1.0", features = ["derive"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
thiserror = "1.0"
serde-wasm-bindgen = "0.6"
log = "0.4"

# leptos feature
leptos = { version = "0.6", optional = true }

# only include if not wasm
[target.'cfg(not(target_family = "wasm"))'.dependencies]
tauri = { version = "1.6", default-features = false, features = ["wry"] }

[target.'cfg(target_family = "wasm")'.dependencies]
#tauri-interop-macro = { path = "./tauri-interop-macro", features = ["_wasm"] }
tauri-interop-macro = { version = "2.1.1", features = [ "_wasm" ] }

[target.'cfg(not(target_family = "wasm"))'.dev-dependencies]
tauri = "1.6"

[features]
default = []
event = ["tauri-interop-macro/event"]
initial_value = ["tauri-interop-macro/initial_value"]
leptos = ["dep:leptos", "tauri-interop-macro/leptos"]
