[workspace]
members = ["tauri-interop-macro"]
package.edition = "2021"
package.keywords = ["wasm", "tauri", "command", "event", "leptos"]
package.authors = ["photovoltex"]
package.repository = "https://github.com/photovoltex/tauri-interop.git"
package.license = "MIT OR Apache-2.0"

[package.metadata.docs.rs]
# see https://docs.rs/about/metadata for more options
all-features = true

[package]
version = "2.1.6"
edition.workspace = true
keywords.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

name = "tauri-interop"
description = "Easily connect your rust frontend and backend without writing duplicate code."
readme = "README.md"

[dependencies]
tauri-interop-macro = { path = "./tauri-interop-macro" }
#tauri-interop-macro = { version = "2.2.0" }

js-sys = "0.3"
serde = { version = "1", features = ["derive"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
thiserror = "2"
serde-wasm-bindgen = "0.6"
log = "0.4"

# leptos feature
leptos = { version = "0.7", optional = true }

# only include if not wasm
[target.'cfg(not(target_family = "wasm"))'.dependencies]
tauri = { version = "^2", default-features = false, features = ["wry"] }

[target.'cfg(target_family = "wasm")'.dependencies]
tauri-interop-macro = { path = "./tauri-interop-macro", features = ["_wasm"] }
#tauri-interop-macro = { version = "2.2.0", features = [ "_wasm" ] }

[target.'cfg(not(target_family = "wasm"))'.dev-dependencies]
tauri = "^2"

[features]
default = []
event = ["tauri-interop-macro/event"]
initial_value = ["tauri-interop-macro/initial_value"]
leptos = ["dep:leptos", "tauri-interop-macro/leptos"]
