[package]
edition.workspace = true
version.workspace = true
keywords.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

name = "tauri-interop-macro"
description = "Macros for the tauri-interop crate."

[lib]
proc-macro = true

[dependencies]
syn = { version = "^2.0", features = [ "full" ]}
quote = "^1.0"
convert_case = "^0.6"
lazy_static = "^1.4"
serde = "^1.0"
proc-macro2 = "^1.0"

[features]
# todo: remove default feature before publish
default = [ "event" ]
leptos  = [ "event" ]
event   = []
# feature to get info that context is wasm
wasm    = []
