[package]
edition.workspace = true
version.workspace = true
keywords.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

name = "tauri-interop-macro"
description = "Macros for the tauri-interop crate."

[lib]
proc-macro = true

[dependencies]
syn = { version = "^2.0", features = [ "full", "extra-traits" ]}
quote = "^1.0"
convert_case = "^0.6"
lazy_static = "^1.4"
proc-macro2 = "^1.0"
proc-macro-error = "1.0.4"

[dev-dependencies]
tauri = { version = "^1.5", default-features = false, features = ["wry"] }
log = "^0.4"
serde = "^1.0"
# required because the intented usage is to use the main crate,
# for testing we need the reexported macros from tauri-interop
tauri-interop = { path = "..", features = ["initial_value"] }

[features]
# todo: remove default feature before publish
default = [ "event" ]
event   = []
leptos  = []
initial_value = []
# feature to get info that context is wasm
_wasm   = []
