[package]
version = "2.2.1"
edition.workspace = true
keywords.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
exclude.workspace = true

name = "tauri-interop-macro"
description = "Macros for the tauri-interop crate."

[package.metadata.docs.rs]
# see https://docs.rs/about/metadata for more options
all-features = true

[lib]
proc-macro = true

[dependencies]
syn = { version = "^2.0", features = [ "full", "extra-traits" ]}
quote = "^1.0"
convert_case = "^0.8"
lazy_static = "^1.4"
proc-macro2 = "^1.0"
proc-macro-error = "1.0.4"

[dev-dependencies]
tauri = { version = "^2", default-features = false, features = ["wry"] }
serde = { version = "^1.0", features = [ "derive" ] }
# required because the intented usage is to use the main crate,
# for testing we need the reexported macros from tauri-interop
tauri-interop = { path = "..", features = ["event", "initial_value"] }
# required by the code examples
log = "0.4.26"

[features]
default = []
event   = []
leptos  = []
initial_value = []
# feature to get info that context is wasm
_wasm   = []
