cargo-features = [ "per-package-target" ]

[package]
name = "frontend"
version = "0.1.0"
edition = "2021"
default-target = "wasm32-unknown-unknown"

[workspace]
members = ["src-tauri", "api"]

[dependencies]
api = { path = "./api", default-features = false, features = [ "wasm" ]}

console_error_panic_hook = "0.1.7"
console_log = "1.0.0"
log = "0.4.20"
gloo-timers = "0.3.0"
serde-wasm-bindgen = "0.6.1"
serde = { version = "1.0.193", features = ["derive"] }
wasm-bindgen-futures = "0.4.38"
leptos = { version = "0.5.2", optional = true }

[features]
default = [ "leptos" ]
leptos = ["dep:leptos", "api/leptos"]
