[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
tauri-interop = { path = "../..", features = [ "listen" ]}

# common
log = "0.4.20"
serde = { version = "1.0", features = ["derive"] }

# host target
tauri = { version = "1.5.2", optional = true }

# wasm target
js-sys = { version = "0.3.65", optional = true }
serde-wasm-bindgen = { version = "0.6.1", optional = true }
wasm-bindgen = { version = "0.2", features = ["serde-serialize"], optional = true }
wasm-bindgen-futures = {version = "0.4", optional = true}

[features]
default = [ "host" ]
host = ["dep:tauri"]
wasm = ["dep:js-sys", "dep:serde-wasm-bindgen", "dep:wasm-bindgen", "dep:wasm-bindgen-futures"]
broken = []
